force-app/main/default/objects/Lead__c/Lead__c.object-meta.xml
<CustomObject>
    <label>Lead</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leads</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>