force-app/main/default/objects/Lead__c/fields/ConvertedAcconutId__c.field-meta.xml
<CustomField>
    <fullName>ConvertedAcconutId__c</fullName>
    <label>ConvertedAcconutId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>