force-app/main/default/objects/Lead__c/fields/ConvertedContactId__c.field-meta.xml
<CustomField>
    <fullName>ConvertedContactId__c</fullName>
    <label>ConvertedContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>