force-app/main/default/objects/Lead__c/fields/ConvertedOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>ConvertedOpportunityId__c</fullName>
    <label>ConvertedOpportunityId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>