force-app/main/default/objects/Lead__c/fields/isconverted__c.field-meta.xml
<CustomField>
    <fullName>isconverted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isconverted</label>
    <type>Checkbox</type>
</CustomField>