force-app/main/default/objects/Lead__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
                <default>true</default>
                <label>Working</label>
            </value>
            <value>
                <fullName>Closed (Converted)</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
                <color>#FF0000</color>
                <label>Lost</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>