force-app/main/default/objects/Lead__c/fields/Product_Interested_for__c.field-meta.xml
<CustomField>
    <fullName>Product_Interested_for__c</fullName>
    <label>Product Interested for</label>
    <length>255</length>
    <type>Text</type>
</CustomField>