force-app/main/default/objects/Lead__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>