force-app/main/default/objects/Lead__c/validationRules/GSTIN.validationRule-meta.xml
<ValidationRule>
    <fullName>GSTIN</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( ISBLANK(GSTIN_No__c)) ,LEN(GSTIN_No__c)&lt;&gt;15)</errorConditionFormula>
    <errorDisplayField>GSTIN_No__c</errorDisplayField>
    <errorMessage>Only allowed 15 digit in GST</errorMessage>
</ValidationRule>