force-app/main/default/objects/Lead__c/validationRules/mobile_digit_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>mobile_digit_validation</fullName>
    <active>true</active>
    <description>Valid_for_10_digits</description>
    <errorConditionFormula>NOT(REGEX(Mobile__c ,&quot;[0-9]{3}[0-9]{3}[0-9]{4}&quot;))</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>Valid to 10 digit mobile number</errorMessage>
</ValidationRule>