force-app/main/default/objects/Lead__c/validationRules/Phone_digit_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_digit_validation</fullName>
    <active>false</active>
    <description>10 digit validation.</description>
    <errorConditionFormula>AND( NOT(ISBLANK( Phone__c)), LEN(Phone__c) &gt; 10
)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Valid to 10 digit phone number</errorMessage>
</ValidationRule>