force-app/main/default/objects/Lead__c/validationRules/Restrict_Update_Lead_After_Convert.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Update_Lead_After_Convert</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL(PRIORVALUE(Lead_Status__c) , &apos;Closed (Converted)&apos;),True,false)</errorConditionFormula>
    <errorMessage>You can not update Lead when the lead status is converted.</errorMessage>
</ValidationRule>