force-app/main/default/objects/Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>First_Name__c</columns>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Lead_Status__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Lead_Type__c</columns>
    <columns>State_Province__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed (Converted)</value>
    </filters>
    <label>All</label>
</ListView>