force-app/main/default/objects/Lead__c/listViews/Lead.listView-meta.xml
<ListView>
    <fullName>Lead</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Lead_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed (Converted)</value>
    </filters>
    <label>Lead</label>
</ListView>